H06: Uso del dinero por parte del menor V2
V2: Ya tiene las demas CP